--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost/foro_alura
 spring.datasource.username=root
 spring.datasource.password=Escorpions6
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
