--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=Escorpions6
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-stacktrace=never
